# opsOS-Platform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/sample/: events.csv  events_bad.csv
docs/: PROJECT_CONTEXT.md  REPO_RULES.md  ROADMAP.md  WORKFLOW.md  perf.md  profile_opt2_top10.txt
scripts/: gen_events_csv.py
services/ingestor/: pyproject.toml
services/ingestor/src/ingestor/: cli.py  csv_io.py  models.py
tests/: conftest.py  test_ingestor_csv.py  test_ingestor_limits.py  test_smoke.py
